nodeCommit
