# myApi/src/swagger.json
@@ -12,7 +12,7 @@
   "paths": {
     "/roles": {
       "post": {
-        "tags": ["Role"],
+        "tags": ["Roles"],
         "summary": "Create a role",
         "description": "Create a new role",
         "requestBody": {
@@ -31,7 +31,25 @@
         },
         "responses": {
           "201": {
-            "description": "Role created."
+            "description": "Role created.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string"
+                    },
+                    "name": {
+                      "type": "string"
+                    },
+                    "created_at": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
           },
           "400": {
             "description": "Role already exists."
@@ -39,12 +57,120 @@
         }
       },
       "get": {
-        "tags": ["Role"],
+        "tags": ["Roles"],
         "summary": "List all roles",
         "description": "Returns all roles paginated",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Number pages",
+            "required": false,
+            "schema": {
+              "type": "number",
+              "example": "page=1"
+            },
+            "style": "label"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Number limit",
+            "required": false,
+            "schema": {
+              "type": "number",
+              "example": "limit=15"
+            },
+            "style": "label"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "example": {
+                  "per_page": 15,
+                  "total": 2,
+                  "current_page": 1,
+                  "data": [
+                    {
+                     "id": "fd33bc3d-2316-4167-9b09-be467f855af3",
+                     "name": "Users",
+                     "created_at": "2022-12-27T22:09:41.000Z"
+                    },
+                   {
+                     "id": "46dfb783-11d1-4d56-96d8-57526b302155",
+                     "name": "Admin",
+                     "created_at": "2022-12-28T20:38:52.000Z"
+                   }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/roles/{id}":{
+      "put": {
+        "tags": ["Roles"],
+        "summary": "Update a Role",
+        "description": "Update a Role",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Identify a role",
+            "required": true,
+            "schema": {
+              "type": "number"
+            },
+            "style": "label"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json":{
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  }
+                },
+                "example": "Admin"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string"
+                    },
+                    "name": {
+                      "type": "string"
+                    },
+                    "created_at": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400":{
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Role not found"
           }
         }
       }
